# port-groundfire-for-python

./: .gitignore  LICENSE  README.md  cpp_output.txt  iniciar-all.sh  iniciar-clientes.sh  iniciar-server.sh  pyproject.toml  requirements.txt  run_game.bat  run_game.ps1  run_game.sh  run_server.bat  run_server.ps1  run_server.sh
conf/: assets.json  controls.ini  options.ini  servers.json
data/: arrow.tga  blast.tga  fonts.tga  smoke.tga  trail.tga  weaponicons.tga
docs/: architecture_assessment_2026.md  classic_controller_playtest.md  godot_build_and_runtime.md  godot_migration_strategy.md  godot_server_directory_schema.md  godot_websocket_protocol.md  jogajogaautomatico.md  plano_fidelidade_browser_counter_strike.md  refactor_roadmap_2026.md  secure_online_mode.md
godot/: export_presets.cfg  project.godot
groundfire/: __init__.py  __main__.py  client.py  master.py  server.py
groundfire-0.25/: CHANGES.txt  COMPILING.txt  COPYING  Makefile  README.md  README.txt  _current_test_output.json  groundfire  groundfire.ini  test_full_suite
groundfire_net/: __init__.py  browser.py  codec.py  discovery.py  master.py  server.py  transport.py  websocket_gateway.py
interface_net/: README.md  __init__.py  client_interface.py  config.py  factory.py  lan_client.py  lan_protocol.py  local_session.py  online_match.py  online_session.py  server_browser_demo.py  server_browser_ui.py  session.py
scripts/: convert_legacy_tga_assets.py  export_godot.sh  generate_readme_art.py  package_godot_release.sh  profile_round_simulation.py  qa_godot_web.sh  run_quality_checks.py  (+2 more)
(+326 files in other folders)
